-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.0-beta1, Qt Creator 17.0.0
-
-
30dca2a99 (16.0)
Changing anything, even unrelated to the given target, in CMakeLists.txt results in run command line arguments being reset.
| For Gerrit Dashboard: QTCREATORBUG-32454 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 623705,2 | PE: Do not clear run cmdline arguments for CMake targets | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |