PE: Do not clear run cmdline arguments for CMake targets

Amends 5537a102e6df273afe63f9323410873831896c6d

Only set the command line arguments if the "arguments" additional data
is present.

Fixes: QTCREATORBUG-32454
Change-Id: I5b3d5607218d97b184bd361b02b650e2d9863dc0
Reviewed-by: Eike Ziller <eike.ziller@qt.io>